crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_trailing_arrow.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected end of input, expected expression
  --> 3:1
  |
3 | 
  | ^
